# ComputerGYM

./: .gitignore  README.md  pyproject.toml
computergym/: __init__.py  make_env.py
computergym/actions/: __init__.py  action.py  action_utils.py  functions.py  interaction_actions.py  utils.py
computergym/chats/: chat.py
computergym/demonstrations/: __init__.py  demonstrate.sh  demonstration.py  demonstration_config.yaml  dummy.yaml  process_demonstration.py  sankalp.yaml
computergym/envs/: __init__.py
computergym/envs/browser/: __init__.py  history.py  openended_website.py  temp_browser.py
computergym/obs_processors/: __init__.py  axtree_processor.py  html_processor.py  obs_processors.py  observations.py  screenshot_processor.py  som_processor.py  utils.py
computergym/utils/: __init__.py  utils.py
