[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computergym"
version = "0.1.0"
description = "Simple enviorment for browser and computer agents"
authors = [{ name = "Sankalp Garg", email = "authors@reinforcealignai.com" }]
requires-python = ">=3.10"
dependencies = [
    "browsergym",
    "litellm",
    "matplotlib",
    "instructor"
]